# FEDOT.MAS

./: .env.example  .env.examples  .gitignore  .pre-commit-config.yaml  AGENTS.md  ARCHITECTURE.md  README.md  all_tools_compact.py  justfile  pyproject.toml  run_llm.py  zensical.toml
.github/workflows/: test.yml
benchmarks/: _utils.py
benchmarks/aime_math/: config.py  dataset.py  requirements.txt  run.py  scorer.py  settings.py
benchmarks/gaia/: dataset.py  requirements.txt  run_optimized.py  run_zeroshot.py  scorer.py  settings.py
bifrost/: config.json
data/benchmark_queries/: dataset_info.json  state.json
docs/: debugger.md  index.md  optimizer.md
examples/: basic_usage.py  two_stage_usage.py
examples/control/: high_level.py  low_level.py
examples/deployment/: auto_generate_serve.py  handcrafted_serve.py
examples/deployment/mas/: auto_generate_serve.py  handcrafted_serve.py
examples/deployment/maw/: auto_generate_serve.py  handcrafted_serve.py
examples/edge_cases/: meta_generation.py  multi_model.py  pipeline_structures.py  state_passing.py  tool_integration.py
examples/gaia/: README.md  data.py  run_gaia.py
examples/mas/: basic_usage.py
examples/maw/: basic_usage.py
examples/maw/edge_cases/: meta_generation.py  multi_model.py  pipeline_structures.py  state_passing.py  tool_integration.py
examples/meta_debugger/: eval_check.py  framework_error.py  programmatic_check.py
examples/optimize/: basic.py  callbacks.py  checkpoint.py  custom_scorer.py  merge.py  stopping.py  strategies.py  trainval_split.py
examples/synapse/: mongo_persistence.py
examples/tools/: browser.py  browser_usage.py  document.py  download.py  media.py  sandbox.py  sandbox_e2b.py  web.py  web_scraping.py
mcp-servers/: README.md
mcp-servers/browser/: README.md  pyproject.toml
mcp-servers/browser-usage/: README.md  pyproject.toml
mcp-servers/browser-usage/src/mcp_browser_usage/: server.py
mcp-servers/browser-usage/tests/: test_server.py
mcp-servers/document/: README.md  pyproject.toml
mcp-servers/document/src/mcp_document/: server.py
mcp-servers/document/tests/: test_server.py
mcp-servers/download/: README.md  pyproject.toml
mcp-servers/download/src/fedotmas_mcp_download/: server.py
mcp-servers/download/src/mcp_download/: server.py
mcp-servers/light-sandbox/: pyproject.toml
mcp-servers/light-sandbox/src/lightsandbox/: server.py
mcp-servers/media/: README.md  pyproject.toml
mcp-servers/media/src/mcp_media/: server.py
mcp-servers/media/tests/: test_content.py
mcp-servers/sandbox/: README.md  pyproject.toml
mcp-servers/sandbox-light/: README.md  pyproject.toml
mcp-servers/sandbox-light/src/mcp_sandbox_light/: server.py
mcp-servers/sandbox-light/tests/: test_server.py
mcp-servers/sandbox/src/mcp_sandbox/: server.py
mcp-servers/sandbox/tests/: test_server.py
mcp-servers/searxng-search/: README.md  pyproject.toml
mcp-servers/searxng-search/src/fedotmas_mcp_searxng/: server.py
mcp-servers/web-scraping/: README.md  pyproject.toml
mcp-servers/web-scraping/src/mcp_web_scraping/: server.py
mcp-servers/web-scraping/tests/: test_server.py
mcp-servers/websearch-searxng/: README.md  pyproject.toml
mcp-servers/websearch-searxng/src/mcp_websearch_searxng/: server.py
src/fedotmas/: __init__.py  config.toml  main.py
src/fedotmas/common/: logging.py
src/fedotmas/config/: settings.py
src/fedotmas/mcp/: registry.py
src/fedotmas/mcp/servers/download/: server.py
src/fedotmas/meta/: agent.py  prompts.py
src/fedotmas/pipeline/: _ppline_utils.py  builder.py  models.py  runner.py  visualizer.py
