[project]
name = "fedotmas-workspace"
version = "0.0.0"
description = "FEDOT.MAS workspace"
requires-python = ">=3.12"
dependencies = []

[tool.uv.workspace]
members = ["packages/*", "mcp-servers/*"]

[tool.uv.sources]
fedot-mas = { workspace = true }

[dependency-groups]
dev = [
    "prek>=0.3.3",
    "ruff>=0.15.1",
    "ty>=0.0.17",
]

[tool.ty.rules]
unresolved-import = "ignore"
possibly-missing-import = "ignore"
