[build-system]
build-backend = "uv_build"
requires = [ "uv-build>=0.10.3,<0.11" ]

[project]
name = "mcp-download"
version = "0.1.0"
description = "MCP server for downloading files from URLs"
requires-python = ">=3.12"
classifiers = [
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
]
dependencies = [
  "fastmcp>=2.14.5",
  "httpx>=0.27",
  "platformdirs>=4",
  "pydantic>=2.12.5",
]
scripts.mcp-download = "mcp_download.server:main"

[tool.fedotmas]
mcp.name = "download"
mcp.description = "Download files from URLs to the local filesystem. Supports single and batch downloads with size validation."
mcp.tags = [ "web", "files" ]
