[build-system]
build-backend = "uv_build"
requires = [ "uv-build>=0.10.3,<0.11" ]

[project]
name = "mcp-sandbox"
version = "0.1.0"
description = "Full Python sandbox (E2B) with pip, file I/O, shell, and persistent Jupyter-style sessions"
requires-python = ">=3.12"
classifiers = [
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
]
dependencies = [ "e2b-code-interpreter>=1", "fastmcp>=2.14.5" ]
scripts.mcp-sandbox = "mcp_sandbox.server:main"

[dependency-groups]
dev = [ "pytest", "pytest-asyncio" ]

[tool.pytest]
ini_options.asyncio_mode = "auto"

[tool.fedotmas]
mcp.name = "sandbox"
mcp.description = """\
  Full Python sandbox, pip install, file I/O, shell commands, persistent Jupyter-style sessions. Variables, imports, \
  and packages are preserved across calls. Use when code requires third-party libraries, data processing, or system \
  access.\
  """
mcp.tags = [ "code", "sandbox" ]
