[build-system]
build-backend = "uv_build"
requires = [ "uv-build>=0.10.3,<0.11" ]

[project]
name = "mcp-websearch-searxng"
version = "0.1.0"
description = "MCP server for web search via self-hosted SearXNG metasearch engine"
requires-python = ">=3.12"
classifiers = [
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
]
dependencies = [
  "fastmcp>=2.14.5",
  "httpx>=0.27",
  "pydantic>=2.12.5",
  "python-dotenv>=1.2.1",
]
scripts.mcp-websearch = "mcp_websearch_searxng.server:main"

[tool.fedotmas]
mcp.name = "websearch-searxng"
mcp.description = """
MCP server for web search via self-hosted SearXNG. Supports filtering by category
(general, news, science, etc.) and language.
"""
mcp.tags = [ "web", "search", "research" ]
